# BdwTabbedWidget

./: .gitignore  AUTHORS  BdwTabbedWidget.doap  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  bdwtabs.c
